# stateless-validator

./: AGENTS.md  Cargo.toml  README.md  REVIEW.md
.github/: CODEOWNERS  codecov.yml
.github/workflows/: build-and-test.yml  claude.yml  coverage.yml  lint.yaml  release-tracing.yaml  release.yaml  unit.yaml
crates/stateless-common/: Cargo.toml
crates/stateless-common/src/: db.rs  lib.rs  logging.rs  metrics.rs  rpc_client.rs  witness_size.rs
crates/stateless-core/: Cargo.toml
crates/stateless-core/src/: chain_spec.rs  data_types.rs  database.rs  db.rs  evm_database.rs  executor.rs  lib.rs  light_witness.rs  pipeline.rs  rpc_client.rs  withdrawals.rs
crates/stateless-core/src/pipeline/: advancer.rs  config.rs  divergence.rs  fetcher.rs  mod.rs  tests.rs  traits.rs  worker.rs
crates/stateless-db/: Cargo.toml
crates/stateless-db/src/: cache.rs  helpers.rs  lib.rs  serialize.rs  tables.rs
crates/stateless-test-utils/: Cargo.toml
crates/stateless-test-utils/src/: env.rs  fixtures.rs  lib.rs
crates/validator-core/: Cargo.toml
crates/validator-core/src/: chain_sync.rs  lib.rs  light_witness.rs  rpc_client.rs  tracing_executor.rs  validator_db.rs
scripts/: coverage_stateless_core.sh  validator-status.sh
test_data/mainnet/: contracts.txt  genesis.json
test_data/mainnet/blocks/: 10000000.0xd6063b448ff8dbc1d86ab71bb47c978a1ea34d7f6652429c85004288569410ee.json  10000001.0x4d4987d997b35d5787a50a0ae1828786b1760ea6e3ba9c9d99ae4ce613ea5853.json  10000375.0x06499f6c85a7ba9f41ef4804e6ca2700e6e0108db3ae5301fbb04fc798515eea.json  10000376.0xa362a0afcb5ca4689f3bc236a1a488bf11fa90988f050b8776756793dcf5dc84.json  10001113.0x1f6ed10a18771b1b3d9ca062df43f632f8f4875ed2d7dd50ad24f49283efd702.json  10001114.0xdcc6acc2e7d0ac105fb8ec657d30ff25660ebc3905ece401fa4cc512d76d28f6.json  10001451.0x96a5f6a41bcb6674fcb2ff18e997382fe55fac6abf39ea7c6d309fbbdf4e2cd7.json  10001452.0xb1e586528a36ed8370d5850025135375fa2fd4c96ddcee6d62dc15b34a761eb8.json  10001650.0xba3b3ca82d8b3db25165a2170a994e61a2f2ac9743486ee49829f5f21232ff2b.json  10001651.0x351f5359304d6a6b2482afb65277118c8f1b950c086489814952985dd3f27dd3.json  10002741.0xcb4dc46ca0121b62e06d673c4325e4664d81d9735bf8c2a529796cf554822991.json  10002742.0x008f8681214e224e614887f43580224b06c7f310c4002e4ac816d1547c619f4a.json  10003528.0xeb775c41c02bbc39e9b89f9c5f992ba6f074722711921d0adc74ff20b013309d.json  10003529.0x7dba831d6307c650f25bc5265cceebb3b6c92e64abfde6516eaaf53f9172e122.json  10004173.0x561e949ac139f791a9a8ea0efdf38861725270c0b7997fdcce8557899a3c8cc8.json  10004174.0xd5ecbeb982e0c8f2f66267b6ddeb0a3df847e8ff47f98a252f8d098595ba926f.json  7301260.0xd5928df57b97523dcbbf67348fff376508fe135c1ac3eb5a9d76ea7e321c3bd0.json  7301261.0x814f27b4f1de87f4d9067d06301b4033d85ebecdffcff2420beae4d889c7d0ae.json
test_data/mainnet/stateless/witness/: 10000001.0x4d4987d997b35d5787a50a0ae1828786b1760ea6e3ba9c9d99ae4ce613ea5853.salt  10000376.0xa362a0afcb5ca4689f3bc236a1a488bf11fa90988f050b8776756793dcf5dc84.salt  10001114.0xdcc6acc2e7d0ac105fb8ec657d30ff25660ebc3905ece401fa4cc512d76d28f6.mpt  10001114.0xdcc6acc2e7d0ac105fb8ec657d30ff25660ebc3905ece401fa4cc512d76d28f6.salt  10001452.0xb1e586528a36ed8370d5850025135375fa2fd4c96ddcee6d62dc15b34a761eb8.salt  10001651.0x351f5359304d6a6b2482afb65277118c8f1b950c086489814952985dd3f27dd3.salt  10002742.0x008f8681214e224e614887f43580224b06c7f310c4002e4ac816d1547c619f4a.salt  10003529.0x7dba831d6307c650f25bc5265cceebb3b6c92e64abfde6516eaaf53f9172e122.salt  10004174.0xd5ecbeb982e0c8f2f66267b6ddeb0a3df847e8ff47f98a252f8d098595ba926f.salt  7301261.0x814f27b4f1de87f4d9067d06301b4033d85ebecdffcff2420beae4d889c7d0ae.mpt  7301261.0x814f27b4f1de87f4d9067d06301b4033d85ebecdffcff2420beae4d889c7d0ae.salt
test_data/synthetic/: contracts.txt  genesis.json
test_data/synthetic/blocks/: 349.0x67dc4b9171e3e19e15a29416541bcfff6e873284b240b589445f3bfe4f624c46.json  350.0xf80495f6e00ad28186a85bed821afd7781d31c7bb6e61926124b00da350f8dbf.json  351.0x881c7e563618c7a32e52d35a9fb295e829e8668060ab9e4879957069b7279a07.json  352.0xe93bef5a2245b49341466ed9bd8e77de1d0853f60e67f8745e872ca835b5e401.json  353.0xf0173cbe998b50db035e67b50d2280c5ba63537f4bf60fee915983fe33516387.json  354.0x54f7ccb2eb2461848e9a06322372d25867bd786d6786213adcb3caa06bbe1adc.json  355.0xc11695a72d106b44b5b96335440ca42f955a63a95641374173981c39d2cc8400.json  356.0x7fa12a5f58a65e7a7da388e07d8b95286b91369ebd24c17ba77a9859696df7b6.json  357.0xdc4012dd94d8187089e5c99e533446bef398f448ef53f870a4a9937ed9ebaf44.json  358.0x9555f62c2856604731111ff78d8e40a7c2db1ddce7a3498eead50371d870d67d.json  359.0xa821b5914ae1b6d47a9755b0b67d2a0210f916835991397b604d05a76e1746f3.json  360.0x591bd12e9a928b891a064bfd3ed2a15539f58889f330e087165739c078ed9517.json  361.0x1e25942f6eb45e8a1f5c34b4cae9abdfb609c4950212fbe414289cb0e434959a.json  362.0x097bb551a69b9d10f43baf741ed10e4a7217b65dac78cede24c728e6d00ad14a.json  363.0x36d235f28dc5d396b60cecdb1759a48808de58e6bb3bd3b11ad4be50a7101722.json  364.0x0044da729e2cb4c3b839bfec2ed8c3a1e3056286e74af10ab23af3c4f17a12df.json  365.0xbdd256b6cb714650e81bbd968a42bdc4cc7e5b73ce486b9332f4ba956c983558.json  366.0xf46e5061f5303952356c3a6ef5bf103ef37811701254886ebc386fda277eb408.json  367.0xf4d3c42225b13a6b5e55650a6dae23a92d2e6e9a3be60f1c2829305521cddfa8.json  368.0x8ea65b4f73873387dbaf4c6e244bb7f84b10fd9f138052ea142befeaaf010ea1.json  369.0x762bfeefb869aba03f2cff02e0e3b92f30164c53a19f8bd80b8aa8af2263b095.json  370.0xe0aeee6627ab5d480e818b88a42c0e7b4a6a9c93dcb115a798eb143c9650ff27.json
test_data/synthetic/stateless/witness/: 350.0xf80495f6e00ad28186a85bed821afd7781d31c7bb6e61926124b00da350f8dbf.mpt  350.0xf80495f6e00ad28186a85bed821afd7781d31c7bb6e61926124b00da350f8dbf.salt  351.0x881c7e563618c7a32e52d35a9fb295e829e8668060ab9e4879957069b7279a07.mpt  351.0x881c7e563618c7a32e52d35a9fb295e829e8668060ab9e4879957069b7279a07.salt  352.0xe93bef5a2245b49341466ed9bd8e77de1d0853f60e67f8745e872ca835b5e401.mpt  352.0xe93bef5a2245b49341466ed9bd8e77de1d0853f60e67f8745e872ca835b5e401.salt  353.0xf0173cbe998b50db035e67b50d2280c5ba63537f4bf60fee915983fe33516387.mpt  (+35 more)
