[package]
name = "validator-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-hardforks.workspace = true

# op
alloy-op-evm.workspace = true
alloy-op-hardforks.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-serde.workspace = true
alloy-trie.workspace = true

# misc
base64.workspace = true
bincode.workspace = true
dyn-clone.workspace = true
eyre.workspace = true
futures.workspace = true
lz4_flex.workspace = true

# megaeth 
mega-evm.workspace = true
num_cpus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
rayon.workspace = true
redb.workspace = true

# reth
reth-ethereum-forks.workspace = true
reth-optimism-chainspec.workspace = true
reth-trie.workspace = true
reth-trie-common.workspace = true
reth-trie-sparse.workspace = true

# revm
revm.workspace = true
revm-inspectors.workspace = true
rustc-hash.workspace = true
salt.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true

[features]
test-bucket-resize = ["salt/test-bucket-resize"]
